fix(priority-grid): fix selected choice alignment

--- a/src/prioritization-grid/src/components/ChoiceBox.scss
+++ b/src/prioritization-grid/src/components/ChoiceBox.scss
@@ -54,8 +54,6 @@
     border: 1.5px solid rgb(255, 0, 0);
     width: 18px;
     height: 18px;
-    padding-right: 1px;
-    padding-bottom: 1px;
     text-align: center;
     vertical-align: middle;
   }
@@ -67,8 +65,6 @@
     height: 18px;
     color: rgba(0, 0, 0, 0.136);
     text-align: center;
-    padding-right: 1px;
-    padding-bottom: 1px;
     vertical-align: middle;
   }
 
