--- a/src/prioritization-grid/src/components/ChoiceGrid.scss
+++ b/src/prioritization-grid/src/components/ChoiceGrid.scss
@@ -25,6 +25,7 @@
 
   .ChoiceBox {
     rotate: 90deg;
+    line-height: 1.2;
   }
 
   .Choice {
